Sidebar now sits to the left of all elements. ISSUE: elements are now squished against said sidebar....

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,8 @@
   height: 100vh;
   width: 250px;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 20px;
 }
 
 
