--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#root{
+  flex-grow: 1;
+}
+
+.app-container {
+  flex-grow: 1;
+  display: flex;
+}
